NP-9334-CourseAccessChecker-Fagperson