@@ -120,7 +120,7 @@ public class FsMock {
         personRoles.put(person.getFsIdNumber(), roles);
 
         List<FsUriToCourseActivity> uriToCourseActivities = roles.stream()
-                                                                .map(this::createUriToCourseActivity).toList();
+                                                                .map(this::createUriToCourseActivity).collect(Collectors.toList());
         for (FsRoleToStaffPerson role : roles) {
             for (FsUriToCourseActivity uriToCourseActivity : uriToCourseActivities) {
                 coursesToRoles.put(role, uriToCourseActivity);
@@ -128,7 +128,7 @@ public class FsMock {
         }
 
         List<FsCourseActivity> coursesToStaffPerson = uriToCourseActivities.stream()
-                                                          .map(this::createCourseActivity).toList();
+                                                          .map(this::createCourseActivity).collect(Collectors.toList());
         for (FsUriToCourseActivity uriToCourseActivity : uriToCourseActivities) {
             for (FsCourseActivity toStaffPerson : coursesToStaffPerson) {
                 courseActivities.put(uriToCourseActivity, toStaffPerson);
